# hackthenorth

./: .gitignore  README.md  bun.lockb  doc.md  dox.md  items.jsonl  package-lock.json  package.json  pnpm-lock.yaml
.databricks/: notebook.ipynb  query.sql
.fastapi_server/: Dockerfile  docker-compose.yml  main.py  my.md  pyproject.toml  test.db
.mobile_app/backend-flutter/: package.json
.mobile_app/backend-flutter/src/: index.ts
.mobile_app/ios/Runner.xcodeproj/: project.pbxproj
.mobile_app/lib/: main.dart
app/: page.tsx
app/table/: page.tsx
app/test/: page.tsx
app/todo/: layout.tsx
components/: date-page.tsx  date-page2.tsx  nav-bar.tsx  on-boarding-page.tsx  to-do-items.tsx
components/(meetups)/: meetupList.tsx
components/breadcrumbs/: ui.tsx
convex/: chatFunctions.ts  http.ts  myFunctions.ts  schema.ts  userFunctions.ts
convex/_generated/: api.d.ts
mobile_app/: pubspec.yaml
mobile_app/android/app/: build.gradle
mobile_app/backend-flutter/: bun.lockb  wrangler.toml
mobile_app/backend-flutter/src/: index.ts
mobile_app/ios/Runner/: Info.plist
src/app/: globals.css  layout.tsx  page.tsx  page2.tsx
src/app/(landingpage)/: LandingPage.tsx
src/app/(loggedin)/: loggedInClient.tsx  loggedInUser.tsx
src/app/api/stats/: route.ts
src/app/chat/[meetupId]/: chatClient.tsx  page.tsx
src/app/dashboard/: clientPage.tsx  page.tsx
src/app/stats/: page.tsx
src/app/store/: onboardingStore.ts
src/app/todo/: page.tsx
src/convex/: myFunctions.ts  schema.ts  userFunctions.ts
src/convex/_generated/: api.d.ts
(+6 files in other folders)
